Perkin-UAT/force-app/main/default/objects/BD_Suggested_Part__c/BD_Suggested_Part__c.object-meta.xml
<CustomObject>
    <label>Suggested Part</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Suggested Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>