Perkin-UAT/force-app/main/default/objects/BD_Suggested_Part__c/fields/BD_Is_Kit__c.field-meta.xml
<CustomField>
    <fullName>BD_Is_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kit</label>
    <type>Checkbox</type>
</CustomField>