Perkin-UAT/force-app/main/default/objects/BD_Suggested_Part__c/fields/BD_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>BD_Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Asset Genius</fullName>
            </value>
            <value>
                <fullName>Billable Calibration</fullName>
            </value>
            <value>
                <fullName>Billable Install - Accessory</fullName>
            </value>
            <value>
                <fullName>Billable LabMetrix</fullName>
            </value>
            <value>
                <fullName>Billable PM</fullName>
            </value>
            <value>
                <fullName>Billable Qualification</fullName>
            </value>
            <value>
                <fullName>Billable Repair</fullName>
            </value>
            <value>
                <fullName>Billable UOQ</fullName>
            </value>
            <value>
                <fullName>Biomatic</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Consumable sales on contract</fullName>
            </value>
            <value>
                <fullName>Engineering Change Order</fullName>
            </value>
            <value>
                <fullName>Inside Service Call</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Installation Qualification</fullName>
            </value>
            <value>
                <fullName>Instr. Performance Validation</fullName>
            </value>
            <value>
                <fullName>Labmetrix IQ</fullName>
            </value>
            <value>
                <fullName>Laboratory IT</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>OQ/PQ</fullName>
            </value>
            <value>
                <fullName>Out Of Scope</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance</fullName>
            </value>
            <value>
                <fullName>Pre Install Visit</fullName>
            </value>
            <value>
                <fullName>Qualification - Lab Manager</fullName>
            </value>
            <value>
                <fullName>Recondition</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>