Perkin-UAT/force-app/main/default/objects/BD_Suggested_Part__c/fields/BD_Suggested_Part__c.field-meta.xml
<CustomField>
    <fullName>BD_Suggested_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Suggested Parts (Suggested Part)</relationshipLabel>
    <relationshipName>Suggested_Parts1</relationshipName>
    <type>Lookup</type>
</CustomField>